@@ -6,6 +6,7 @@ import org.p2p.solanaj.programs.SystemProgram;
 import org.junit.Test;
 import static org.junit.Assert.*;
 
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.List;
 
@@ -44,7 +45,7 @@ public class TransactionTest {
                         )
                 )
                 .setRecentBlockHash("Eit7RCyhUixAe2hGBS8oqnw59QK3kgMMjfLME5bm9wRn")
-                .setSigners(List.of(signer))
+                .setSigners(Arrays.asList(signer))
                 .build();
 
         assertEquals(
